--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
+colorama==0.4.5
 cryptography==37.0.4
 dill==0.3.5.1
 Flask==2.1.3
 idna==3.3
+importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -27,7 +29,6 @@ retworkx==0.11.0
 scipy==1.8.1
 six==1.16.0
 stevedore==4.0.0
-symengine==0.9.2
 sympy==1.10.1
 tqdm==4.64.0
 tweedledum==1.1.1
@@ -35,3 +36,4 @@ urllib3==1.26.10
 websocket-client==1.3.3
 websockets==10.3
 Werkzeug==2.1.2
+zipp==3.8.1
